--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,3 +1,9 @@
+.container {
+  width: 60%;
+  display: block;
+  margin: auto;
+}
+
 .navbar {
   padding-top: 5px;
   height: 65px;
@@ -5,8 +11,9 @@
 }
 
 #home_icon {
-  width: 50px;
-  height: 50px;
+  padding-top: 5px;
+  width: 40px;
+  height: 40px;
 }
 
 .home {
@@ -27,10 +34,10 @@
   text-decoration: none;
   display: inline-block;
   background: #4E9CAF;
-  padding: 10px;
+  padding: 8px;
   text-align: center;
   border-radius: 5px;
-  color: white;
+  color: black;
 
 }
 
