--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,7 +8,7 @@
     <label for="password">Password: </label><br>
     <input type="password" name="password"><br><br>
 
-    <input class="button" type="submit" name="login" value="log in">
+    <input class="button" type="submit" name="login" value="Log In">
   </form>
 
   <%= erb :'_error' %>
