--- a/app/views/answers/create.erb
+++ b/app/views/answers/create.erb
@@ -3,6 +3,7 @@
     <label for="answer">Your Answer:</label><br>
     <textarea rows="10" cols="50" name="answer[text]"></textarea><br><br>
     <input type="hidden" name="answer[user_id]" value="<%= current_user.id %>">
+    <input type="hidden" name="answer[question_id]" value="<%= @question.id %>">
 
     <input type="submit" value="Answer" class="button">
 </div>
