added more answer stuff

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
 
   <ul>
     <% @questions.each do |question| %>
-      <li><a class="link" href="/questions/<%=question.id%>"><%=question.title%></a><br> Asked on <%=question.created_at%> by <a class="link" href="/users/<%=question.user.id%>"><%=question.user.username%></a></li><br>
+      <li><a class="link" href="/questions/<%=question.id%>"><%=question.title%></a><br> <%=stub(question.text)%><br> Asked on <%=long_form_date(question.created_at)%> by <a class="link" href="/users/<%=question.user.id%>"><%=question.user.username%></a></li><br>
     <% end %>
   </ul>
 
