answers can only be edited or deleted by the user that posted it

--- a/app/views/answers/edit.erb
+++ b/app/views/answers/edit.erb
@@ -1,13 +1,11 @@
 <% if current_user.id == @answer.user_id %>
 <div class="container">
-  <form method="post" action="/answers">
-    <input type="hidden" method="put" value='put'>
+  <form method="post" action="/answers/<%=@answer.id%>">
+    <input type="hidden" name="_method" value="put">
     <label for="answer">Edit Your Answer:</label><br>
     <textarea rows="10" cols="50" name="answer[text]"><%=@answer.text%></textarea><br><br>
-    <input type="hidden" name="answer[user_id]" value="<%= current_user.id %>">
-    <input type="hidden" name="answer[question_id]" value="<%= @question.id %>">
 
-    <input type="submit" value="Answer" class="button">
+    <input type="submit" value="Edit" class="button">
 </div>
 
 <%= erb :'_error' %>
