did comment things but this is the wrong branch for it lol

--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -34,28 +34,40 @@
 
 
   <div class="comments">
-    <p> add comments here</p>
+    <ul>
+      <% @question.comments.each do |comment| %>
+        <li><%=comment.text%><br> By: <a class="link" href="/users/<%=comment.user.id%>"><%=comment.user.username%></a> on <%=long_form_date(comment.created_at)%></li><br>
+      <% end %>
+    </ul>
+    <a class="button" href="/questions/<%=@question.id%>/comment/new">Comment</a>
   </div>
 
 
   <h2> Answers </h2>
   <ul>
     <% @question.answers.each do |answer| %>
-    <li><%=answer.text%><br><br> By: <a class="link" href="/users/<%=answer.user.id%>"><%=answer.user.username%></a> Answered on: <%=long_form_date(answer.created_at)%><br>add comments for answers here</li>
+
+    <li><%=answer.text%><br><br> By: <a class="link" href="/users/<%=answer.user.id%>"><%=answer.user.username%></a> Answered on: <%=long_form_date(answer.created_at)%>
       <% if current_user.id == answer.user_id %>
         <ul>
           <li class="link"><a class="button" href="/answers/<%= answer.id %>/edit">edit</a></li>
           <li class="link">
             <form method="post" action="/answers/<%= answer.id %>" class="inline">
-              <input type="hidden"  name="_method" value="delete">
-              <input type="submit" class="button" value="delete">
-            </form>
-          </li>
+            <input type="hidden"  name="_method" value="delete">
+            <input type="submit" class="button" value="delete">
+            </form></li>
         </ul>
-        <% end %>
-    <br><br>
+          <br><br>
+        <ul>
+          <% answer.comments.each do |comment| %>
+            <li><%=comment.text%><br> By: <a class="link" href="/users/<%=comment.user.id%>"><%=comment.user.username%></a> on <%=long_form_date(comment.created_at)%></li><br>
+          <% end %>
+        </ul>
       <% end %>
-  </ul>
 
+    <a class="button" href="/answers/<%=answer.id%>/comment/new">Comment</a><br><br>
+
+    <% end %>
+  </ul>
 
 </div>
