--- a/public/css/application.css
+++ b/public/css/application.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-  width: 60%;
+  width: 80%;
   display: block;
   margin: auto;
 }
@@ -30,7 +30,7 @@ body {
 .home_row {
   display: inline-block;
   vertical-align: bottom;
-  width: 70%;
+  width: 65%;
   text-align: right;
 }
 
@@ -63,4 +63,35 @@ li {
   font-size: 1.5em;
   letter-spacing: 0.15em;
   padding-left: 10px;
+}
+.listing {
+  border-bottom: 1px solid black;
+}
+
+.vote_button {
+  padding-top: 5px;
+  width: 80px;
+  height: 80px;
+}
+.the_vote_buttons{
+  vertical-align: top;
+  display: inline-block;
+  width: 15%;
+}
+.vote_count {
+  width: 80px;
+  text-align: center;
+}
+
+.no_padding {
+  padding-left: 0px;
+}
+
+.some_margin {
+  margin-left: 38px;
+}
+
+.question_field {
+  display: inline-block;
+  width: 70%;
 }
