voting and stuff

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -29,10 +29,10 @@
       <% if current_user %>
         <a class="button" href="/users/<%=current_user.id%>"><%= current_user.username%></a>
         <a class="button" href="/questions/new">Ask a Question</a>
-        <a class="button" href="/users/logout">Logout</a>
+        <a class="button" href="/users/logout">Dogout</a>
       <% else %>
-        <a class="button" href="/users/login">Login</a>
-        <a class="button" href="/users/new">Create Account</a>
+        <a class="button" href="/users/login">Dogin</a>
+        <a class="button" href="/users/new">Creeat Account</a>
       <% end %>
 
     </div>
