--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Please login</h2>
+  <h2>Please Dogin</h2>
 
   <form method="post" action="/users/login">
     <label for="username\">Username: </label><br>
@@ -8,7 +8,7 @@
     <label for="password">Password: </label><br>
     <input type="password" name="password"><br><br>
 
-    <input class="button" type="submit" name="login" value="Log In">
+    <input class="button" type="submit" name="login" value="Dog In">
   </form>
 
   <%= erb :'_error' %>
