--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -7,13 +7,13 @@
 
   <div class="the_vote_buttons">
     <div class="upvote">
-      <a href="/questions/<%=@question.id%>/upvote"><img class="vote_button" src="http://alextass.com/wp-content/uploads/2015/05/Dog-happy-puppy-tongue-logo-design-symbol-icon-by-Alex-Tass.jpg"></a>
+      <a href="/questions/<%=@question.id%>/upvote"><img class="vote_button" src="/images/upvote.jpg"></a>
     </div>
     <div class="vote_count">
-      <%=@question.votes.length%>
+      <%=@question.total_votes%>
     </div>
     <div class="upvote">
-      <a href="/questions/<%=@question.id%>/downvote"><img class="vote_button" src="http://a1.dspncdn.com/media/692x/63/88/75/638875b8d26a2b3277caff4cf3aec97b.jpg"></a>
+      <a href="/questions/<%=@question.id%>/downvote"><img class="vote_button" src="/images/downvote.jpg"></a>
     </div>
   </div>
 
@@ -54,16 +54,20 @@
 
   <h2> Answers </h2>
   <ul>
+
     <% @question.answers.sort_by{ |answer| answer.best ? 0 : 1}.each do |answer| %>
+
+    <li class="listing">
+
     <div class="the_vote_buttons">
     <div class="upvote">
-      <a href="/answers/<%=answer.id%>/upvote"><img class="vote_button" src="http://alextass.com/wp-content/uploads/2015/05/Dog-happy-puppy-tongue-logo-design-symbol-icon-by-Alex-Tass.jpg"></a>
+      <a href="/answers/<%=answer.id%>/upvote"><img class="vote_button" src="/images/upvote.jpg"></a>
     </div>
     <div class="vote_count">
-      <%=answer.votes.length%>
+      <%=answer.total_votes%>
     </div>
     <div class="upvote">
-      <a href="/answers/<%=answer.id%>/downvote"><img class="vote_button" src="http://a1.dspncdn.com/media/692x/63/88/75/638875b8d26a2b3277caff4cf3aec97b.jpg"></a>
+      <a href="/answers/<%=answer.id%>/downvote"><img class="vote_button" src="/images/downvote.jpg"></a>
     </div>
   </div>
 
@@ -71,17 +75,17 @@
       <% if answer.best %>
         <p>Best Answer!</p><br>
       <% end %>
-    <li class="listing"><%=answer.text%><br><br> By: <a class="link" href="/users/<%=answer.user.id%>"><%=answer.user.username%></a> Answered on: <%=long_form_date(answer.created_at)%>
+    <%=answer.text%><br><br> By: <a class="link" href="/users/<%=answer.user.id%>"><%=answer.user.username%></a> Answered on: <%=long_form_date(answer.created_at)%>
 
       <% if current_user.id == @question.user_id && @best_values.exclude?(true) %>
 
-      <a class="button some_margin" href="/answers/<%=answer.id %>/best">Mark as best answer</a>
+        <a class="button some_margin" href="/answers/<%=answer.id %>/best">Mark as best answer</a>
 
       <% end %>
 
 
-      <% if current_user.id == answer.user_id %>
-        <ul>
+      <% if current_user && current_user.id == answer.user_id %>
+        <ul class="some_padding">
           <li class="link"><a class="button" href="/answers/<%= answer.id %>/edit">edit</a></li><br>
           <li class="link">
             <form method="post" action="/answers/<%= answer.id %>" class="inline">
@@ -90,8 +94,8 @@
             </form></li>
         </ul>
         <% end %>
-      <br><br>
-        <ul>
+
+        <ul class="some_padding">
           <% answer.comments.each do |comment| %>
             <li class="listing"><%=comment.text%><br> By: <a class="link" href="/users/<%=comment.user.id%>"><%=comment.user.username%></a> on <%=long_form_date(comment.created_at)%></li><br>
           <% end %>
@@ -101,9 +105,10 @@
       <a class="button some_margin" href="/answers/<%=answer.id%>/comment/new">Comment</a>
     <br><br>
     <% end %>
-      </li><br>
       </div>
+      </li>
     <% end %>
+
   </ul>
 
   <%= erb :'_error' %>
