--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -12,7 +12,7 @@
     <div class="vote_count">
       <%=@question.total_votes%>
     </div>
-    <div class="upvote">
+    <div class="downvote">
       <a href="/questions/<%=@question.id%>/downvote"><img class="vote_button" src="/images/downvote.jpg"></a>
     </div>
   </div>
@@ -35,7 +35,7 @@
 
       <% if current_user && current_user.id != @question.user_id %>
         <li class="pipe-separate left">
-          <a class="button" href="/questions/<%= @question.id %>/answers/new">answer</a>
+          <a class="button" id="answer_button" href="/questions/<%= @question.id %>/answers/new">answer</a>
         </li>
     <% end %>
     </ul>
@@ -47,7 +47,7 @@
           <li class="listing"><%=comment.text%><br> By: <a class="link" href="/users/<%=comment.user.id%>"><%=comment.user.username%></a> on <%=long_form_date(comment.created_at)%></li><br>
         <% end %>
       </ul>
-      <a class="button some_margin" href="/questions/<%=@question.id%>/comment/new">Comment</a>
+      <a class="button some_margin" id="comment_button" href="/questions/<%=@question.id%>/comment/new">Comment</a>
     </div>
   </div>
 
@@ -66,7 +66,7 @@
     <div class="vote_count">
       <%=answer.total_votes%>
     </div>
-    <div class="upvote">
+    <div class="downvote">
       <a href="/answers/<%=answer.id%>/downvote"><img class="vote_button" src="/images/downvote.jpg"></a>
     </div>
   </div>
