--- a/app/views/answers/create.erb
+++ b/app/views/answers/create.erb
@@ -5,7 +5,7 @@
     <input type="hidden" name="answer[user_id]" value="<%= current_user.id %>">
     <input type="hidden" name="answer[question_id]" value="<%= @question.id %>">
 
-    <input type="submit" value="Answer" class="button">
+    <input type="submit" value="Answer" id= "answer_submit" class="button">
 </div>
 
 <%= erb :'_error' %>
