--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -45,7 +45,7 @@
     <div class="comments">
       <ul>
         <% @question.comments.each do |comment| %>
-          <li class="listing"><%=comment.text%><br> By: <a class="link" href="/users/<%=comment.user.id%>"><%=comment.user.username%></a> on <%=long_form_date(comment.created_at)%></li><br>
+          <%= erb :'_comment_display', locals: { comment: comment } %>
         <% end %>
       </ul>
       <a class="button some_margin" id="comment_button" href="/questions/<%=@question.id%>/comment/new">Comment</a>
