--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
 
   <ul>
     <% @questions.each do |question| %>
-      <li class="listing"><a class="link much_bigger_text" href="/questions/<%=question.id%>"><%=question.title%></a><br> <span class="bigger_text"><%=stub(question.text)%></span><br><br> Asked on <%=long_form_date(question.created_at)%> by <a class="link" href="/users/<%=question.user.id%>"><%=question.user.username%></a><br>
+      <li class="listing"><a class="link much_bigger_text" href="/questions/<%=question.id%>"><%=question.title%></a><br> <span class="bigger_text"><%=stub(question.text)%></span><br><br> Asked on <%=long_form_date(question.created_at)%> by <a class="link" href="/users/<%=question.user.id%>"><%=question.user.username%></a>, <%= question.user.breed%><br>
         Total Votes: <%=question.total_votes%> Total Answers: <%=question.answers.length%>
       </li><br>
     <% end %>
