added dog drawing and paw buttons

--- a/app/views/answers/_answer_display.erb
+++ b/app/views/answers/_answer_display.erb
@@ -2,13 +2,13 @@
 
     <div class="the_vote_buttons">
     <div class="answer_upvote">
-      <a href="/answers/<%=answer.id%>/upvote"><img class="vote_button" src="/images/upvote.jpg"></a>
+      <a href="/answers/<%=answer.id%>/upvote"><i class="fa fa-paw" aria-hidden="true"></i></a>
     </div>
     <div class="vote_count">
       <%=answer.total_votes%>
     </div>
     <div class="answer_downvote">
-      <a href="/answers/<%=answer.id%>/downvote"><img class="vote_button" src="/images/downvote.jpg"></a>
+      <a href="/answers/<%=answer.id%>/downvote"><i class="fa fa-paw" aria-hidden="true"></i></a>
     </div>
   </div>
 
