--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,7 +16,11 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
   <script src="/js/voting_ajax.js"></script>
+
   <script src="/js/answer.js"></script>
+
+  <script src="https://use.fontawesome.com/d0a6f7e1c7.js"></script>
+
   <title></title>
 </head>
 <body>
@@ -39,5 +43,8 @@
     </div>
   </nav>
   <%= yield %>
+    <div id='dog_cover_image'>
+    <img class="puppies" src="/images/doge_drawing.png">
+  </div>
 </body>
 </html>
