--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -7,13 +7,13 @@
 
   <div class="the_vote_buttons">
     <div class="upvote">
-      <a href="/questions/<%=@question.id%>/upvote"><img class="vote_button" src="/images/upvote.jpg"></a>
+      <a href="/questions/<%=@question.id%>/upvote"><i class="fa fa-paw" aria-hidden="true"></i></a>
     </div>
     <div class="vote_count">
       <%=@question.total_votes%>
     </div>
     <div class="downvote">
-      <a href="/questions/<%=@question.id%>/downvote"><img class="vote_button" src="/images/downvote.jpg"></a>
+      <a href="/questions/<%=@question.id%>/downvote"><i class="fa fa-paw" aria-hidden="true"></i></a>
     </div>
   </div>
 
