--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,18 +1,18 @@
 <div class="container">
 
-   <h2>Please create an account</h2>
+   <h2>Please create a hound account</h2>
 
    <form method="post" action="/users">
-    <label for="username">Username: </label><br>
+    <label for="username">Dogname: </label><br>
     <input type="text" name="user[username]"></br>
 
-    <label for="email">E-mail: </label><br>
+    <label for="email">D-mail: </label><br>
     <input type="text" name="user[email]"></br>
 
     <label for="breed">Breed: </label><br>
     <input type="text" name="user[breed]"></br>
 
-    <label for="password">Password: </label><br>
+    <label for="password">Passwoof: </label><br>
     <input type="password" name="user[password]"></br><br>
 
     <input class="button" type="submit" name="register" value="Create Account">
